--- a/build.gradle
+++ b/build.gradle
@@ -1,8 +1,4 @@
-buildscript {
-    ext {
-        compose_version = '1.1.1'
-    }
-}/*
+/*
  * Copyright (c) 2022 The Android Open Source Project
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
@@ -18,11 +14,20 @@ buildscript {
  * limitations under the License.
  */
 
+buildscript {
+    ext {
+        agp_version = '7.2.1'
+        compose_version = '1.2.0'
+        lifecycle_version = '2.4.1'
+        kotlin_version = '1.7.0'
+    }
+}
+
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 plugins {
-    id 'com.android.application' version '7.2.0' apply false
-    id 'com.android.library' version '7.2.0' apply false
-    id 'org.jetbrains.kotlin.android' version '1.7.0' apply false
+    id 'com.android.application' version "$agp_version" apply false
+    id 'com.android.library' version "$agp_version" apply false
+    id 'org.jetbrains.kotlin.android' version "$kotlin_version" apply false
 }
 
 task clean(type: Delete) {
