--- a/app/build.gradle
+++ b/app/build.gradle
@@ -65,7 +65,9 @@ android {
 dependencies {
     implementation platform('androidx.compose:compose-bom:2023.01.00')
     implementation 'androidx.activity:activity-compose:1.6.1'
+    implementation "androidx.compose.material3:material3-window-size-class"
     implementation 'androidx.compose.material3:material3'
+    implementation "androidx.lifecycle:lifecycle-viewmodel-compose:$lifecycle_version"
     implementation 'androidx.compose.ui:ui'
     implementation 'androidx.compose.ui:ui-graphics'
     implementation 'androidx.compose.ui:ui-tooling-preview'
